# anthosvec

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
anthosvec/: __init__.py  collection.py  filters.py  index.py  schema.py  text.py
examples/: quickstart.py
tests/: test_anthosvec.py
