[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "anthosvec"
version = "0.1.0"
description = "An embedded, in-process vector database — vectors, full-text, and hybrid search with no server."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Brian Tushae Thomas" }]
requires-python = ">=3.9"
dependencies = ["numpy>=1.22,<3"]
keywords = ["vector-database", "embeddings", "search", "bm25", "hybrid-search", "embedded"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/TushaeBXN/anthosvec"

[tool.setuptools.packages.find]
include = ["anthosvec*"]
